--- a/views/_footer.pug
+++ b/views/_footer.pug
@@ -3,7 +3,7 @@ footer.footer
     img(src='/img/logo-green.png' alt='Natour logo')
   ul.footer__nav
     li: a(href='#') About us
-    li: a(href='#') Download apps
+    li: a(href='#') Download app
     li: a(href='#') Become a guide
     li: a(href='#') Careers
     li: a(href='#') Contact
